# ompd

./: CLAUDE.md  Cargo.toml  PLAN_multiple_aspect_ratios.md  README.md  build.rs  config.json
.githooks/unix/: pre-push
.githooks/windows/: pre-push
.github/workflows/: build.yml  dependent-issues.yml  linux-build.yml  linux.yml  mac-build.yml  mac.yml  pr-sanity.yml  release.yml  windows-build.yml  windows.yml
src/: back_filler.rs  capturer.rs  config.rs  dir_manager.rs  lib.rs  main.rs  movie_maker.rs  not_windows.rs  windows.rs
src/capturer/: not_windows.rs  windows.rs
tests/: multi_resolution_integration.rs
