[package]
name = "ompd"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
screenshots = "0.5.3"
image = "0.24.6"
imageproc = "0.23.0"
rusttype = "0.9.3"
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
duration-human = "0.1.10"