[package]
name = "ompd"
version = "2.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
csv = "1.3"
ctrlc = "3.2.5"
env_logger = "0.10.0"
glob = "0.3.1"
home = "0.5.4"
image = "0.24.6"
imageproc = "0.23.0"
log = "0.4.17"
rusttype = "0.9.3"
screenshots = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symlink = "0.1.0"
webp = { version = "0.3", default-features = false }
which = "4.4.0"
zstd = "0.12.3"

[target.'cfg(windows)'.dependencies]
wmi = "0.12.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"